# tauri-plugin-context-menu

./: .gitignore  Cargo.toml  LICENSE.md  README.md  lerna.json  package.json
.changes/: 0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.6.1.md  0.6.2.md  0.7.0.md  0.7.1.md  0.8.0.md  0.8.1.md  0.8.2.md  config.json  initial-release.md  readme.md
.github/workflows/: covector-version-or-publish.yml
examples/multi/: package.json
examples/multi/public/: index.html  index.js
examples/multi/src-tauri/: .gitignore
examples/ts-utility/: .gitignore  esbuild.js  package.json  tsconfig.json
examples/ts-utility/public/: index.html
examples/ts-utility/src/: index.d.ts  index.ts
examples/ts-utility/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/: package-lock.json  package.json
examples/vanilla/public/: index.html  index.js
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
plugin/: esbuild.js  index.ts  jest.config.cjs  package.json  tsconfig.json  types.ts
src/: keymap.rs  lib.rs  linux.rs  macos.rs  macos_window_holder.rs  menu_item.rs  theme.rs  win.rs  win_image_handler.rs  window_holder.rs
webview-dist/: index.d.ts  index.js  index.js.map  types.d.ts
webview-src/: esbuild.js  index.spec.ts  index.ts  tsconfig.json  types.ts
