[package]
name = "tauri-plugin-context-menu"
version = "0.2.0"
authors = [ "c2r0b" ]
description = "Handle native Context Menu in Tauri"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.59"
exclude = ["/examples", "/assets", ".DS_Store", "/.github", "/.changes"]

[dependencies]
tauri = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
cocoa = "0.24.1"
objc = "0.2.7"
dispatch = "0.2.0"
libc = "0.2.147"
lazy_static = "1.4"
