[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "You" ]
repository = ""
edition = "2021"
rust-version = "1.59"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.7", features = [ "path-all", "dialog-all" ] }
tauri-plugin-context-menu = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
